--- a/test3.html
+++ b/test3.html
@@ -34,7 +34,7 @@
     </div>
     <div id="container"></div>
     <div id="setting">
-      <input type="text" value="50" id="size" >
+      <input type="text" value="5" id="size" >
       <input type="button" value="Start"onclick="">
       <input type="button" value="stop" onclick="">
       <input type="button" value="next" onclick="">
@@ -69,15 +69,21 @@
           for (let i = 0; i < sizeValue; i++) {
             for(let j =0; j< sizeValue; j++){
             cloneCell[i][j] = cell.cloneNode()
+            cloneCell[i][j].setAttribute('id', i + ',' + j)
             container.appendChild(cloneCell[i][j])
             }
           }
 
         }
-
         addEventListener('load', () => createCell())
         size.addEventListener('input', () => createCell())
 
+        container.addEventListener("click", (e) =>{
+          if (e.target.className !== 'cell') return
+          e.target.style.background = "black"
+          let pointer = e.target.getAttribute('id').split(',')
+
+        })
 
 
 
